<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCredit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontalMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCredit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/valor_credito"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontalMargin"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilCredit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cedula"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilFee"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontalMargin"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilCc">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/etFee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cuotas"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/calcular_cuotas"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/ilFee"
        app:layout_constraintStart_toEndOf="@+id/clearBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer2" />

    <Space
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilFee"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/limpiar_registros"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/calculateBtn"
        app:layout_constraintStart_toStartOf="@+id/ilFee"
        app:layout_constraintTop_toBottomOf="@id/spacer2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToHistory"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_history"
        android:textAllCaps="false"
        app:icon="@drawable/ic_history"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Tu credito sera diferido a 9 cuotas"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/purple_500"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/goToHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn"
        app:layout_constraintVertical_bias="0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toTopOf="@+id/goToHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateBtn"
            app:layout_constraintVertical_bias="0" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>